fixed appfilterpane_Container  grid spacing

--- a/LIGHT/libraryroot.custom.css
+++ b/LIGHT/libraryroot.custom.css
@@ -2155,7 +2155,7 @@ div.MediumWindow
 .appfilterpane_SteamDeckCompatDropDown_1SFpb {
   position: absolute;
   right: -216px;
-  bottom: -102px;
+  bottom: -110px;
 }
 
 .appfilterpane_SteamDeckCompatDropDown_1SFpb ._DialogInputContainer .DialogDropDown_CurrentDisplay {
@@ -7575,9 +7575,9 @@ button.DialogButton.appdetailsbutton_AppDetailsButton_3Cdin.appdetailsbutton_Lef
   color: var(--ACCENT) !important;
 }
 
-.appfilterpane_Container_170Np .appfilterpane_FilterArea_1ennW {
+/* .appfilterpane_Container_170Np .appfilterpane_FilterArea_1ennW {
   grid-gap: 0 24px !important;
-}
+} */
 
 .appdetailssectionheader_SectionHeader_1Q2q_ {
   color: var(--DETAILSSECTIONHEADER) !important;
